# django-cors-headers

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  .typos.toml  CHANGELOG.rst  HISTORY.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  codeql-analysis.yml  flake8.cfg  pyproject.toml  pytest.ini  requirements-compile.sh  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  tests.py  tox.ini
.github/: FUNDING.yml  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature-request.yml  issue.yml
.github/workflows/: codeql-analysis.yml  main.yml
corsheaders/: __init__.py  apps.py  checks.py  compat.py  conf.py  defaults.py  middleware.py  models.py  signals.py  tests.py  validators.py
corsheaders/migrations/: 0001_initial.py
corsheaders/tests/: test_conf.py  test_middleware.py  urls.py
requirements/: compile.py  compile.sh  py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py35-django111.txt  py35-django20.txt  py35-django21.txt  py35-django22.txt  py36-django111.txt  py36-django20.txt  py36-django21.txt  py36-django22.txt  py36-django30.txt  py36-django31.txt  py36-django32.txt  py37-django111.txt  py37-django20.txt  py37-django21.txt  py37-django22.txt  py37-django30.txt  py37-django31.txt  py37-django32.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  (+8 more)
src/corsheaders/: __init__.py  apps.py  checks.py  conf.py  decorators.py  defaults.py  middleware.py  signals.py
tests/: settings.py  test_checks.py  test_conf.py  test_decorators.py  test_middleware.py  test_model.py  urls.py  utils.py  views.py
tests/requirements/: compile.py  py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py310-django52.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py311-django52.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py312-django52.txt  py313-django51.txt  py313-django52.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt  requirements.in
tests/testapp/: models.py
