[metadata]
name = django-cors-headers
version = 3.7.0
description = django-cors-headers is a Django application for handling the server headers required for Cross-Origin Resource Sharing (CORS).
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Otto Yiu
author_email = otto@live.ca
maintainer = Adam Johnson
maintainer_email = me@adamj.eu
url = https://github.com/adamchainz/django-cors-headers
project_urls =
    Changelog = https://github.com/adamchainz/django-cors-headers/blob/master/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT License
keywords =
    django
    cors
    middleware
    rest
    api
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
install_requires = Django>=2.2
python_requires = >=3.6

[options.packages.find]
where = src

[coverage:run]
branch = True
include = */corsheaders/*

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I
ignore = E203,E501,W503
